# Net-RES-Network

./: .gitignore  READ.me
Samples/s1(STH)/: sens_custom.cogui  sens_custom.coproj
Samples/s18_sph/: .cproject  .mxproject  .project  s18_sph.elf.launch  s18_sph.ioc
Samples/s5(SCD)/: .cproject  .mxproject  .project  s5(SCD).elf.launch  s5(SCD).ioc
Samples/s7(SOD)/: .cproject  .mxproject  .project  s7(SOD).elf.launch  s7(SOD).ioc
doc/: Device.ioc  bags.txt  links.txt  План.txt  распиновка.txt
doc/Client/: ClientPC.vsdx  ~$$ClientPC.~vsdx
doc/Client-PC/: config.cfg  Алгоритм Жуйко.docx  Алгоритм обработки (Матвей Жуйко).docx  Архитектура (Иван).docx
doc/Hardware/: details.txt  Модули.txt
doc/Type1/: План.txt  потребность в памяти.txt
doc/ГТЦ-3/: .mxproject  Device.ioc  ~$нкции ГТЦ.docx  Описание интерфейсов ГТЦ-3.docx  Функции ГТЦ.docx  распиновка.txt
doc/МС-1/: .mxproject  Device.ioc  МС-1.ioc
files/: config.cfg
sources/: CMakeLists.txt  Network.uvmpw  Network.uvmpw.uvgui.Sasha  Network.uvmpw.uvgui.Sasha7b9
sources/4-Governor/: 4-Governor.uvoptx  CMakeLists.txt
sources/5-Governor/: 5-Governor.uvoptx  5-Governor.uvprojx  CMakeLists.txt
sources/Device/: CMakeLists.txt  Device.uvguix.Sasha  Device.uvguix.Sasha7b9  Device.uvoptx  Device.uvprojx  newd2.uvoptx
sources/Device/Listings-Debug/: Device.map
sources/Device/Objects-Debug/: Device.axf  Device.build_log.htm  Device.hex  Device.htm  Device.lnp  Device_Debug.dep
sources/Device/RTE/_Debug/: RTE_Components.h
sources/Device/RTE/_newd2/: RTE_Components.h
sources/Device/src/: Device.cpp  defines.h  main.c  main.cpp  main.h  stm32f1xx_hal_conf.h
sources/Device/src/Display/: Colors.cpp  Colors.h  Display.cpp  Display.h  Zones.cpp  Zones.h
sources/Device/src/Display/Font/: Font.cpp  Font.h  Font22.cpp  Font22.h  font12_10.inc  font5.inc
sources/Device/src/Hardware/: InterCom.cpp  InterCom.h  Keyboard.cpp  Timer.cpp  Timer.h
sources/Device/src/Hardware/CDC/: CDC.c  CDC.cpp  CDC.h  usb_device.c  usb_device.cpp  usb_device.h  usbd_conf.c  usbd_conf.h  usbd_desc.c
sources/Device/src/Hardware/CMSIS/: startup_stm32f103xb.s
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_CONF.h  HAL_I2C.cpp  HAL_IT.cpp  i2c.cpp  stm32f1xx_hal_conf.h  stm32f1xx_hal_conf_gui.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.cpp  stm32f1xx_it.h
sources/Device/src/Hardware/HC12/: HC12.c
sources/Device/src/Hardware/I2C/: i2c.c  i2c.h
sources/Device/src/Hardware/USBD/: usbd_conf.c  usbd_conf.h
sources/Device/src/Hardware/VCP/: usb_device.c  usb_device.h  usbd_cdc_if.h  usbd_conf.c
sources/Device/src/Menu/: Menu.cpp  Menu.h  MenuItems.cpp  MenuItems.h  MenuItemsDefs.h
sources/Device/src/Menu/Pages/: PageDisplay.cpp  PageHC12.cpp  PageSystem.cpp  Pages.cpp  Pages.h
sources/Device/src/Modules/BH1750/: BH1750.cpp  BH1750.h
sources/Device/src/Modules/BME280/: BME280.cpp  BME280.h  bme280_application.c  bme280_application.h  bme280_defs.h  bme280_driver.c  bme280_selftest.c  bme280_selftest.h
sources/Device/src/Modules/CG-Anem/: CG-Anem.cpp  CG-Anem.h
sources/Device/src/Modules/HC12/: HC12.c  HC12.cpp  HC12.h
sources/Device/src/Modules/ST7735/: Colors.cpp  Colors.h  ST7735.cpp  ST7735.h
sources/Device/src/Modules/ST7735/Font/: Font.cpp  Font.h
sources/Device/src/Settings/: Settings.cpp  Settings.h
sources/Device/src/Utils/: Buffer.h  Math.h  Values.cpp
sources/Device/src/Utils/Text/: String.cpp  String.h  Text.cpp  Text.h
sources/GTC/: CMakeLists.txt  GTC.uvguix.Sasha  GTC.uvoptx  GTC.uvprojx
sources/GTC-3/: CMakeLists.txt  GTC-3.sct  GTC-3.uvguix.Sasha  GTC-3.uvoptx  GTC-3.uvprojx
sources/I2C/: i2c.h
sources/MDK-ARM/: newd2.uvguix.IVAN  newd2.uvoptx  newd2.uvprojx  startup_stm32f103xb.lst
sources/MS-1/: CMakeLists.txt  MS-1.uvguix.Sasha  MS-1.uvoptx  MS-1.uvprojx
sources/VS/Client/: Application.cpp  Application.h  CMakeLists.txt  Frame.cpp  Frame.h  defines.h  main.cpp
sources/VS/Client-PC/: Application.cpp  Application.h  CMakeLists.txt  Frame.cpp  Frame.h  Log.cpp  Log.h  defines.h  main.cpp
sources/VS/Client-PC/Communicator/HC12/: HC12.cpp
sources/VS/Client-PC/Communicator/HC12/RS232/: rs232.c
sources/VS/Client-PC/Communicator/HTTP/: HTTP.cpp  HTTP.h
sources/VS/Client-PC/Communicator/LAN/: ServerTCP.cpp
sources/VS/Client-PC/Communicator/LAN/libnet/: netbase.cpp  netserver.cpp
sources/VS/Client-PC/Communicator/Server/: Server.cpp  Server.h
sources/VS/Client-PC/Controls/: ConsoleSCPI.cpp  ConsoleSCPI.h
sources/VS/Client-PC/Data/: Data.cpp  PoolSensors.cpp  PoolSensors.h  ReceivedData.cpp  ReceivedData.h  Sensor.cpp  Sensor.h  Sensors.cpp  Sensors.h
sources/VS/Client-PC/Display/: Colors.cpp  Colors.h  Display.cpp  Display.h  Font.h
sources/VS/Client-PC/Display/Diagram/: Canvas.cpp  Canvas.h  Diagram.cpp  Diagram.h
sources/VS/Client-PC/Display/Grid/: Grid.cpp  Grid.h  Table.cpp
sources/VS/Client-PC/Display/Table/: Table.cpp  Table.h
sources/VS/Client-PC/Utils/: Clock.cpp  Clock.h  DynamicBuffer.cpp  DynamicBuffer.h
sources/VS/Client-PC/Utils/Text/: String.cpp
sources/VS/Client/Communicator/: Communicator.cpp  Communicator.h
sources/VS/Client/Communicator/HC12/: HC12.cpp  HC12.h
sources/VS/Client/Communicator/LAN/: ServerTCP.cpp
sources/VS/Client/Communicator/LAN/libnet/: netbase.cpp
sources/VS/Client/Communicator/USB/: USB.cpp  USB.h
sources/VS/Client/Communicator/VCP/: VCP.cpp  VCP.h  rs232.h
sources/VS/Client/Data/: Data.h
sources/VS/Client/Display/: Colors.cpp  Colors.h  Display.cpp  Display.h  Font.h
sources/VS/Client/Hardware/: Timer.cpp  Timer.h
sources/VS/Client/Hardware/LAN/: ClientTCP.cpp  ServerTCP.cpp  ServerTCP.h
sources/VS/Client/Utils/: Buffer.h
sources/VS/Client/Utils/Text/: String.cpp  String.h
sources/VS/Client/resources/: resources.rc
sources/VS/Device/: Application.cpp  Application.h  CMakeLists.txt  Frame.cpp  Frame.h  main_win.cpp
sources/VS/Device/Hardware/CDC/: CDC_gui.cpp
sources/VS/Device/Hardware/LAN/: ClientTCP.cpp
sources/VS/Device/Hardware/LAN/libnet/: netbase.cpp
temp/USB/Src/: main.c
(+557 files in other folders)
